Fixed guess text being cut off

--- a/style.css
+++ b/style.css
@@ -1,20 +1,19 @@
-p {
-  display: block;
-  height: 5%;
-  text-align: center;
-  background-color: rgb(4, 158, 247);
-  color: white;
-  font-size: 50px;
-  font-family: sans-serif;
-  text-decoration: none;
-  padding: 0;
-  margin: 0;
-}
-#map {
-    height: 95%;
-  }
+p { 
+  display: block; 
+  height: 5%; 
+  text-align: center; 
+  background-color: rgb(4, 158, 247); 
+  color: white; 
+  font-family: sans-serif; 
+  font-size: 4vh; 
+  text-decoration: none; 
+  padding: 0; margin: 0; 
+} 
+#map { 
+  height: 95%; 
+} 
 html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
+    height: 100%; 
+    margin: 0; 
+    padding: 0; 
+}
